<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nwbg"
    tools:context=".admin_profile">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="95dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/changepassword"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/change_password" />

    <Button
        android:id="@+id/btnchange3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/btn_bg"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmpage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmpage"
        app:layout_constraintTop_toBottomOf="@+id/confirmpage"
        app:layout_constraintVertical_bias="0.328"
        app:strokeColor="@color/white" />

    <EditText
        android:id="@+id/customerdetails"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/customer_details"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/changepassword"
        app:layout_constraintStart_toStartOf="@+id/changepassword"
        app:layout_constraintTop_toBottomOf="@+id/changepassword" />

    <EditText
        android:id="@+id/sellerdetails"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/seller_detailss"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/customerdetails"
        app:layout_constraintStart_toStartOf="@+id/customerdetails"
        app:layout_constraintTop_toBottomOf="@+id/customerdetails" />

    <EditText
        android:id="@+id/confirmpage"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/order_confirmation"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sellerdetails"
        app:layout_constraintStart_toStartOf="@+id/sellerdetails"
        app:layout_constraintTop_toBottomOf="@+id/sellerdetails" />

    <Button
        android:id="@+id/btnchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/btn_bg"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmpage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmpage"
        app:layout_constraintTop_toBottomOf="@+id/confirmpage"
        app:layout_constraintVertical_bias="0.335"
        app:strokeColor="@color/white" />

    <ImageView
        android:id="@+id/Homebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnchange"
        app:layout_constraintTop_toBottomOf="@+id/btnchange"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/notifybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilebtn"
        app:layout_constraintStart_toEndOf="@+id/Homebtn"
        app:layout_constraintTop_toBottomOf="@+id/btnchange"
        app:srcCompat="@drawable/notification" />

    <ImageView
        android:id="@+id/profilebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnchange"
        app:layout_constraintTop_toBottomOf="@+id/btnchange"
        app:srcCompat="@drawable/active_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>